# Tweaker-3

./: .gitignore  CITATION.cff  CITATIONS.cff  FileHandler.py  MeshTweaker.py  MeshTweaker_torch.py  README.md  ThreeMF.py  Tweaker.py  demo_object.stl  demo_object_tweaked.stl  mobius_strip.stl  pyproject.toml  pyramid.3mf  setup.cfg  test_Tweaker.py  test_wildcard_cli.py
AutoRotate PlugIn/: README.md
AutoRotate PlugIn/Cura15_04/: printableObject.py
AutoRotate PlugIn/Cura2_3/: README.md
Tweaker as PlugIn/Cura15_04/: MeshTweaker.py  README.md  printableObject.py
Tweaker as PlugIn/Cura2_3/: README.md
