[metadata]
name = tweaker3
author = Christoph Schranz, Salzburg Research
description = A performant auto-rotate module for objects in 3D Printing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChristophSchranz/Tweaker-3
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[tool.setuptools_scm]

[options.entry_points]
console_scripts =
    tweaker3 = tweaker3.Tweaker:cli

[options]
packages = 
    tweaker3
package_dir =
    tweaker3 = ./
python_requires = >=3.6
install_requires =
    numpy

[options.package_data]
* = all.stl

